# emoji-translator

./: CHANGELOG.md  Cargo.toml  README.md  package.json
pkg/: emoji_translator.d.ts  emoji_translator.js  emoji_translator_bg.js  emoji_translator_bg.wasm  emoji_translator_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
