[package]
name = "emoji-translator"
version = "1.0.0"
edition = "2024"
description = "A simple emoji translator using Rust and WebAssembly"
license = "MIT"

[dependencies]
wasm-pack = "0.13.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features= ["console"] }


[lib]
crate-type = ["cdylib", "rlib"]