[package]
name = "emoji-translator"
version = "1.0.0"
edition = "2024"
description = "A simple emoji translator using Rust and WebAssembly"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features= ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
